--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,2 +1,2 @@
 .oh-my-zsh/cache/
-.oh-my-zsh/custom/themes/powerlevel10k/gitstatus/gitstatus.plugin.zsh.zwc
+.oh-my-zsh/custom/themes/powerlevel10k/gitstatus/
